--- a/styles.css
+++ b/styles.css
@@ -373,6 +373,12 @@ video {
     display: block;
     max-height: 80vh;
 }
+.video-wrapper iframe {
+    width: 100%;
+    height: 80vh;   /* adjust if too tall/short */
+    border: none;
+    display: block;
+}
 
 /* Video Details */
 .video-details h1 {
@@ -484,4 +490,5 @@ hr {
 .side-video-info p {
     font-size: 12px;
     color: #aaa;
+
 }
